added colors and buttons

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <meta charset="utf-8"> 
         <link rel="stylesheet" href="style.css">
         <title>Etch-a-Sketch</title>
+        <link rel="icon" type="images/x-icon" href="img/sketch.png" />
+
     </head>
 
     <body>
@@ -11,13 +13,12 @@
         </header>
             <div class="containerGeneral">
                 <div id="containerButtons" class="containerButtons">
-
+                    <button>black</button>
+                    <button>rnbw</button>
+                    <button>clean</button>
                 </div>
                 <div id="containerCell" class="containerCell"></div>
             </div>
-        <footer>
-            <h3></h3>
-        </footer>
         <script src="code.js"></script>
     </body>
 </html>
