I added the fonts and found the mix of good looking colors(mostly marking

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                     <button>black</button>
                     <button>rnbw</button>
                     <button>clean</button>
+                    <button>big</button>
+                    <button>medium</button>
+                    <button>small</button>
                 </div>
                 <div id="containerCell" class="containerCell"></div>
             </div>
