--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <header>
-            <h1>ETCH A SKETCH</h1>
+            <h1 class="headerTxt">ETCH A SKETCH</h1>
         </header>
             <div class="containerGeneral">
                 <div id="containerButtons" class="containerButtons">
