--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 
     <body>
         <header>
-            <h1 class="headerTxt">ETCH A SKETCH</h1>
+            <h1>ETCH A SKETCH</h1>
+            <h2>GitHub</h2>
         </header>
             <div class="containerGeneral">
-                <div id="containerButtons" class="containerButtons">
-                    <button>black</button>
-                    <button>rnbw</button>
-                    <button>clean</button>
-                    <button>big</button>
-                    <button>medium</button>
-                    <button>small</button>
+                <div class="backSketch">
+                    <div id="containerButtons" class="containerButtons">
+                        <button>black</button>
+                        <button>rnbw</button>
+                        <button>clean</button>
+                        <button>big</button>
+                        <button>medium</button>
+                        <button>small</button>
+                    </div>
+                    <div id="containerCell" class="containerCell"></div>
                 </div>
-                <div id="containerCell" class="containerCell"></div>
             </div>
         <script src="code.js"></script>
     </body>
