shadow was added

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <body>
         <header>
             <h1>ETCH A SKETCH</h1>
-            <h2>GitHub</h2>
+            <a class="link" href="https://github.com/philippOkie">GitHub</a>
         </header>
             <div class="containerGeneral">
                 <div class="backSketch">
                     <div id="containerButtons" class="containerButtons">
-                        <button>black</button>
-                        <button>rnbw</button>
-                        <button>clean</button>
-                        <button>big</button>
-                        <button>medium</button>
-                        <button>small</button>
+                        <button>BLACK</button>
+                        <button>RNBW</button>
+                        <button>CLEAN</button>
+                        <button>BIG</button>
+                        <button>MEDIUM</button>
+                        <button>SMALL</button>
                     </div>
                     <div id="containerCell" class="containerCell"></div>
                 </div>
