--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <div class="containerGeneral">
                 <div class="backSketch">
                     <div id="containerButtons" class="containerButtons">
-                        <button>BLACK</button>
-                        <button>RNBW</button>
-                        <button>CLEAN</button>
-                        <button>BIG</button>
-                        <button>MEDIUM</button>
-                        <button>SMALL</button>
+                        <button id="blackButton">BLACK</button>
+                        <button id="rnbwButton">RAINBOW</button>
+                        <button id="cleanButton">CLEAN</button>
+                        <button id="bigButton">BIG</button>
+                        <button id="mdmButton">MEDIUM</button>
+                        <button id="smallButton">SMALL</button>
                     </div>
                     <div id="containerCell" class="containerCell"></div>
                 </div>
