remove old divs func was added, buttons now react on the mouse, func getScale was added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <button id="blackButton">BLACK</button>
                         <button id="rnbwButton">RAINBOW</button>
                         <button id="cleanButton">CLEAN</button>
-                        <button id="bigButton">BIG</button>
+                        <button id="commit ">BIG</button>
                         <button id="mdmButton">MEDIUM</button>
                         <button id="smallButton">SMALL</button>
                     </div>
