random button was added and it works

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="backSketch">
                     <div id="containerButtons" class="containerButtons">
                         <button id="blackButton">BLACK</button>
-                        <button id="rnbwButton">RAINBOW</button>
+                        <button id="rnbwButton">RANDOM</button>
                         <button id="cleanButton">CLEAN</button>
                         <button id="bigButton">BIG</button>
                         <button id="mdmButton">MEDIUM</button>
